--- a/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
+++ b/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
@@ -1,12 +1,12 @@
-{% extends "base.html" %}
+<!-- bookshelf/templates/bookshelf/form_example.html -->
+
+{% extends 'bookshelf/base.html' %}
 
 {% block content %}
-  <h2>Submit Your Info</h2>
-
+  <h2>Example Form</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-
     <button type="submit">Submit</button>
   </form>
 {% endblock %}
