--- a/django_blog/blog/templates/blog/login.html
+++ b/django_blog/blog/templates/blog/login.html
@@ -1,11 +1,12 @@
-{%extends'blog/base.html'%}
-{%block title%}Login{%endblock%}
+{% extends 'blog/base.html' %}
+{% load static %}
+{% block title %}Login{% endblock %}
 
-{%block content %}
+{% block content %}
 <h2>Login</h2>
 <form method="post">
-    {%csrf_token%}
-    {{form.as_p}}
+    {% csrf_token %}
+    {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
-{%endblock%}
+{% endblock %}
