--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -12,3 +12,25 @@
     <a href="{% url 'post-delete' post.pk %}">Delete</a>
 {% endif %}
 {% endblock %}
+
+<h2>Comments</h2>
+{% for comment in post.comments.all %}
+   <p><strong>{{ comment.author }}</strong>: {{ comment.content }}</p>
+   {% if user == comment.author %}
+    <a href="{% url 'edit-comment' comment.pk %}">Edit</a>
+    <a href="{% url 'delete-comment' comment.pk %}">Delete</a>
+   {% endif %}
+   {% empty %}
+    <p>No comments yet.</p>
+    {% endfor %}
+
+{% if user.is_authenticated %}
+ <h3>Add a Comment</h3>
+ <form method="POST" action = "{% url 'add-comment' post.id %}">
+   {% csrf_token %}
+   {{ form.as_p }}
+   <button type="submit">Submit</button>
+ </form>
+{% else %}
+    <p><a href="{% url 'login' %}">Log in</a> to add a comment.</p>
+{% endif %}
