--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -34,3 +34,11 @@
 {% else %}
     <p><a href="{% url 'login' %}">Log in</a> to add a comment.</p>
 {% endif %}
+
+<p><strong>Tags:</strong>
+{% for tag in post.tags.all %}
+    <a href="{% url 'posts-by-tag' tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+{% empty %}
+    No tags.
+{% endfor %}
+</p>
